style/apps.css
.app-card-container {
    margin-top: 120px;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 60px;
}.app-card {
    display: flex;
    flex-direction: row;
    justify-content: left;
    margin-bottom: 50px;
    width: min(75vw,75rem);
    padding: 25px;
    border-radius: 13px;
    background-color: var(--card-bg);
    box-shadow: var(--card-underline2);
    -webkit-box-shadow: var(--card-underline2);
}.app-card .video-container {
    min-width: 566px;
    max-width: 566px;
    width: 566px;
    height: 320px;
    display: flex;
    justify-content: center;
}.app-card .right {
    margin: 10px;
    margin-left: 45px;
    position: relative;
}.app-card .right .title {
    font-size: var(--size-1);
    font-weight: 600;
    color: var(--accent-lighter);
}.app-card .right .description {
    margin-top: 15px;
    margin-bottom: 70px;
}.app-card .right .app-buttons {
    position: absolute;
    bottom: 0px;
}
.app-card .right .icon-button {
    position: absolute;
    bottom: 5px;
}
.app-card .video-container iframe ,
.app-card .video-container img {
    width: 100%;
    height: 100%;
    border-radius: 13px;
    box-shadow: var(--card-glow);
    -webkit-box-shadow: var(--card-glow);
    object-fit: cover;
    background: #121316;
}
.separator{
    width: 50%;
    max-width: 1000px;
    height: 1px;
    justify-self: center;
    /* margin-right: 10%; */
    background-color: var(--accent-lighter);
    /* margin-top: 20px; */
    margin-bottom: 50px;
}

.app-card-container.nomargin{
    margin-top: 0px  !important;
    margin-bottom: 0px !important;
}

@media  (max-width: 1300px) {
    
    .app-card{
        flex-direction: column;
        width: 100% !important;
    }
    .app-card .video-container{
        min-width: 0px !important;
        max-width: none !important;
        width: 90% !important;
        height: 420px;
        transform: translate(5%,0);

        display: flex;
        justify-content: center;
        
    }
    .app-card .video-container[class="img"]{
        height: 335px !important;
    }
    
    .app-card .right{
        margin: 0px  30px !important;
        margin-left: 45px;
        
    display: flex;
    flex-direction: column;

    }
    .app-card .right .title{
        margin-left: 0px !important;
        margin-top: 25px;

    }
    .app-card .right .description{
        margin-left: 0px !important;
        margin-top: 15px;

    }
    .app-card .right .app-buttons{
        position: relative !important;
        max-width: none !important;
        align-self: center;
        flex-direction: column;

        width: 100%;
    }.app-card-container {
        margin-top: 00px;
        margin-bottom: 00px;
    }
}
.app-buttons{
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    gap: 15px;
}

